# ActorSystemCpp

./: CMakeLists.macro.cmake  CMakeLists.txt  README.md  logback.properties  main.cpp  multicastSending.cpp  pingPong.cpp
code/abstractActor/: AbstractActor.cpp  AbstractActor.h
code/actorSystem/: ActorSystem.cpp  ActorSystem.h
code/dataExchanger/: DataExchanger.cpp  DataExchanger.h
code/pingPongActor/: PingPongActor.cpp  PingPongActor.h
code/pingPongMessages/: PingMessage.h  PongMessage.h
code/testActor/: TestActor.cpp  TestActor.h
code/testMessage/: TestMessage.cpp  TestMessage.h
libsCmakeDir/: fmt.cmake
